# uibk_ps_parsys

./: README.md  bench.xlsx  team.txt
exercise01/: mmul  readme.md
exercise01/solution/: bench.txt  benchmark.sh  mmul_openMP.cpp  mmul_seq1.cpp  mmul_seq2.cpp
exercise02/solution/: README.md  benchmark.sh  ex1.1.txt  mmul1  mmul2  mmul3  mmul_1  mmul_1.cpp  mmul_1_omp  mmul_1_omp.cpp  mmul_utm  mmul_utm.cpp  mmul_utm_omp  mmul_utm_omp.cpp  parser.py
exercise03/solution/: README.md  vectorization_table.xlsx
exercise04/: README.md  n_queensTest.cpp  n_queens_problem.cpp  queens
exercise04/solution/: Benches.xlsx  Readme.md  montecarlo  montecarlo_par  montecarlo_par2.cpp  montecarlo_seq  montecarlo_seq.cpp  montecarlo_seq2.cpp
exercise05/: README.md  setUp.txt
exercise05/solution/: README.md
exercise06/: AVLTree.cpp  AVLTree.h  README.md
exercise06/solution/: AVLTree.cpp  AVLTree.h  AVLTreeTest.cpp  AvlMain.cpp  AvlNode.cpp  AvlNode.h  AvlTest.cpp  AvlTree.cpp  AvlTree.h  CMakeLists.txt  README.md  chrono_timer.h  jscript  jscript_part  output_avltree
exercise07/solution/: CMakeLists.txt  README.md  Stencil.cpp  Stencil.h  StencilMain.cpp  Test.cpp  jscript  output_stencil  output_stencil_correct  output_stencil_test
exercise08/: README.md
exercise09/: README.md
exercise09/solution/: Math.cpp  Math.h  Stencil.cpp  Stencil.h  StencilMain.cpp  jscript  jscript_1024  jscript_512  jscript_768  jscript_fix  mpi_test.out
exercise10/: main.cpp
exercise10/MatrixMul/: jscript  main.cpp
exercise11/: error_real  jscript  output_real
(+1044 files in other folders)
